* Wed Apr 24 12:41:41 2002, pabs <pabs@pablotron.org>
  * xmms.c: initial code complete

* Wed Apr 24 14:36:02 2002, pabs <pabs@pablotron.org>
  * xmms.c: generated RDoc API reference
  * xmms.c: added constants for maximum and minimum volume and bands,
    and for the nubmer of bands (MAX_VOL, MIN_VOL, MAX_BAND, MIN_BAND,
    and NUM_BANDS, respectively)
  * xmms.c: updated rdoc comments and README for
    Xmms::Remote#{get,set}_balance quirk
  * xmms.c: correctly spaced examples so rdoc will format them properly
  * regenerated API reference

* Wed Apr 24 16:09:28 2002, pabs <pabs@pablotron.org>
  * xmms.c: added examples/get_playlist.rb
  * released version 0.1.0

* Thu Apr 25 19:45:19 2002, pabs <pabs@pablotron.org>
  * xmms.c: added Xmms::Remote::connect (synonym for Xmms::Remote::new)
  * xmms.c: added Xmms::Remote::{list,pl} (synonyms for
    Xmms::Remote::playlist)
  * xmms.c: band calls throw exception if requested band is out of range

* Sun May 05 02:25:43 2002, pabs <pabs@pablotron.org>
  * xmms.c: added band contants previously, but forgot to mention it.
  * xmms.c: removed $XMMS; egregious namespace violation :)

* Mon May 13 13:11:16 2002, pabs <pabs@pablotron.org>
  * xmms.c: applied set_volume fix from Derrick Wood <dwood@cs.utsa.edu>
  * ChangeLog: modified ChangeLog format (added email address and file)
  * xmms.c: compiles clean with -pedantic (as clean as it can)

* Thu May 23 13:13:50 2002, pabs <pabs@pablotron.org>
  * doc: updated rdoc documentation
  * released version 0.1.1

* Sun Jul 28 16:27:29 2002, pabs <pabs@pablotron.org>
  * xmms.c: Fixed get_info bug reported by Charles Blackburn
    <charlesb@summerfield-technology.co.uk>

Thu Oct 31 10:44:58 2002, pabs <pabs@pablotron.org
  * removed doc/ from CVS