@@ -3,3 +3,6 @@ Paul Duncan <pabs@pablotron.org>
 
 Derrick Wood <dwood@cs.utsa.edu>
 - set_volume patch.
+
+Ian Macdonald <ian@caliban.org>
+- suggested fix for playlist time
